basic react query for salespersons

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "autoprefixer": "^9.8.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.22.0",
+    "react-query-devtools": "^2.4.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "tailwindcss": "^1.7.6"
