--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "autoprefixer": "^9.8.6",
     "axios": "^0.20.0",
+    "fast-json-patch": "^3.0.0-1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-query": "^2.25.2",
